--- a/ms.tex
+++ b/ms.tex
@@ -41,23 +41,23 @@ galaxies: high-redshift}
 
 \section{introduction}
 %\begin{framed}
-Probing the matter distribution in the innermost kpc of galaxies can answer key questions about super massive black holes (SMBH), galaxy formation, and dark matter. It is now established that almost every massive galaxy harbors a SMBH at its center with a mass that strongly correlates with the mass of the host galaxy \citep{Kormendy:95,Ferrarese:00,Gebhardt:00,Tremaine:02,Kormendy:13}.
-In addition, the distribution of stellar populations in central regions of galaxies contains information about their past merger histories and SMBH-stellar population interactions. \citep{}.  Various dark matter models also predict different structures for the central regions of dark matter halos \citep[e.g][]{Rocha:13}.  Mapping the matter density in the central regions of galaxies can thus shed light on various astrophysical phenomena.
+Probing the matter distribution in the innermost kpc of galaxies can answer key questions about super massive black holes (SMBH), galaxy formation, and dark matter. It is now established that almost every massive galaxy harbors a SMBH at its center with a mass that strongly correlates with the mass of the host galaxy \citep{Kormendy:95,Ferrarese:00,Gebhardt:00,Tremaine:02}.
+In addition, the distribution of stellar populations in central regions of galaxies contains information about their past merger histories and SMBH-stellar population interactions. \citep[e.g][]{Barnes:92,Ebisuzaki:91}.  Various dark matter models also predict different structures for the central regions of dark matter halos \citep[e.g][]{Rocha:13}.  Mapping the matter density in the central regions of galaxies can thus shed light on various astrophysical phenomena.
 %probing the inner 0.5 kpc of galaxies is interesting. 1) they contain SMBHs and the relationship of the SMBH mass to galaxies is intriguing and interesting. Dark matter models also have different and interesting predictions for the density of the central regions of galaxies (e.g. cored DM, or SIDM predictions). In addition, the history of galaxy mergers and black hole-stellar population interactions can be encoded in the stellar light profiles, resulting in different stellar  
 %\end{framed}
 
 %\begin{framed}
 %Stellar light profiles:
 %\\ \\
-Morphological studies of galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging from 50 to 500 pc \citep{e.g.ferrarese06}. 
+Morphological studies of galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging from 50 to 500 pc \citep[e.g.,][]{Ferrarese:06}. 
 These galaxies are thought to form through gas-poor mergers. In such mergers, the central structure of the resulting galaxy is dominated by the inner structure of the more concentrated progenitor.  Since high-mass ellipticals are thought to form from mergers of their lower-mass counterparts, with steep profiles, the existence of cores in these galaxies represents a challenge to our understanding of galaxy mergers. Cores in massive ellipticals, therefore, should be the result of different (not merger) mechanisms.  
 ``Black hole scouring'' is currently the only known plausible mechanism that could explain core-formation in these galaxies \citep{Thomas:14}.
 %\end{framed}
 
 %\begin{framed}
-It is thought that during a merger, the SMBHs of the two merging galaxies form a binary which sinks to the center of the potential. The two orbiting SMBH then dissipate angular momentum through three-body interactions with nearby central stars, pushing them to higher orbits and scouring out a core. This angular momentum loss then allows the two black holes to merge. \citep{Begelman et al. 1980}
-Previous studies have shown that the core sizes in these galaxies scales with the mass of their SMBH in agreement with theoretical predictions (Graham 2004; Kormendy \& Bender 2009; Kormendy \& Ho 2013).
-Such measurements, are, however have been limited to low redshifts, since both dynamical measurements to constrain the stellar and SMBH masses, and morphological measurements to constrain core sizes require very high angular resolutions. 
+It is thought that during a merger, the SMBHs of the two merging galaxies form a binary which sinks to the center of the potential. The two orbiting SMBHs then dissipate angular momentum through three-body interactions with nearby central stars, pushing them to higher orbits and scouring out a core. This angular momentum loss then allows the two black holes to merge \citep{Begelman:80}.
+Previous studies have shown that the core sizes in these galaxies scales with the mass of their SMBHs, in agreement with theoretical predictions \citep{Kormendy:09,Kormendy:13}.
+Such measurements, however have been limited to low redshifts, since both dynamical measurements to constrain the stellar and SMBH masses, and morphological measurements to constrain core sizes require very high physical resolutions. 
 % ... whatever the mechanisms are, clear measurements of the central densities can be valuable to solve this puzzle and to shed light on the connection of SMBHs and galaxies. 
 %\end{framed}
 
@@ -95,10 +95,10 @@ To avoid the possibility of absorption in the lens, most studies have focused on
 
 
 %\begin{framed}
-A new large population of strong lenses has recently been discovered \citep{}. These systems were initially discovered as bright point sources in wide area mm/submm surveys \citep{}. Follow-up observations have confirmed that they constitute a large population of strong lenses \citep{}.
-In particular, ALMA observations of these sources has revealed that the background galaxies are starburst, high redshift galaxies, containing a wealth of cold molecular gas \cite{}.  These observations proved that the extremely high flux of the sources in combination with the high sensitivity of ALMA results in a very high signal to noise ratios (the lens models in Hezaveh et al 2013 were based on $\sim50$ s-long observations).
-Motivated by the discovery of this population and the operation of ALMA, in this letter we revisit the issue of detecting central images.
-Deep ALMA observations of molecular lines in these sources are likely to be carried out for various reasons (e.g. power spectrum of dark matter, measuring the mass of SMBH in background galaxies). If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-bands, the line fluxes are very unlikely to be suppressed due to absorption in the lens. 
+A new large population of strong lenses has recently been discovered. These systems were initially detected as bright point sources in wide area mm/submm surveys \citep{vieira:10,negrello:10}. Follow-up observations have confirmed that they constitute a large population of strong lenses \citep{vieira:13, hezaveh:13b, bussmann:13}.
+In particular, ALMA observations of these sources have revealed that the background galaxies are starburst, high redshift galaxies, containing a wealth of cold molecular gas \citep{Weiss:13}.  These observations showed that the extreme brightness the sources in combination with the high sensitivity of ALMA results in very high signal to noise ratios \citep[e.g. the lens models in][were based on $\sim50$ second long observations]{hezaveh:13b}.
+Motivated by the discovery of this population and the operation of ALMA, here we revisit the issue of detecting central images.
+Deep ALMA observations of molecular lines in these sources are likely to be carried out for various reasons \citep[e.g.,][]{hezaveh:14a,hezaveh:14b}. If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-bands, the line fluxes are very unlikely to be suppressed due to absorption in the lens. 
 
 %doesn't decrease due to absorption
 %little (if any) absorption in the lens, so the flux doesn't decrease due to absorption
