--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,150 @@
+
+@ARTICLE{Kormendy:09,
+   author = {{Kormendy}, J. and {Bender}, R.},
+    title = "{Correlations between Supermassive Black Holes, Velocity Dispersions, and Mass Deficits in Elliptical Galaxies with Cores}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {0901.3778},
+ primaryClass = "astro-ph.GA",
+ keywords = {galaxies: elliptical and lenticular, cD, galaxies: evolution, galaxies: formation, galaxies: nuclei, galaxies: photometry, galaxies: structure},
+     year = 2009,
+    month = feb,
+   volume = 691,
+    pages = {L142-L146},
+      doi = {10.1088/0004-637X/691/2/L142},
+   adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...691L.142K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Ferrarese:06,
+   author = {{Ferrarese}, L. and {C{\^o}t{\'e}}, P. and {Jord{\'a}n}, A. and 
+	{Peng}, E.~W. and {Blakeslee}, J.~P. and {Piatek}, S. and {Mei}, S. and 
+	{Merritt}, D. and {Milosavljevi{\'c}}, M. and {Tonry}, J.~L. and 
+	{West}, M.~J.},
+    title = "{The ACS Virgo Cluster Survey. VI. Isophotal Analysis and the Structure of Early-Type Galaxies}",
+  journal = {\apjs},
+   eprint = {astro-ph/0602297},
+ keywords = {ISM: Dust, Extinction, Galaxies: Clusters: Individual: Name: Virgo, Galaxies: ISM, Galaxies: Elliptical and Lenticular, cD, Galaxies: Nuclei},
+     year = 2006,
+    month = jun,
+   volume = 164,
+    pages = {334-434},
+      doi = {10.1086/501350},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJS..164..334F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ebisuzaki:91,
+   author = {{Ebisuzaki}, T. and {Makino}, J. and {Okumura}, S.~K.},
+    title = "{Merging of two galaxies with central black holes}",
+  journal = {\nat},
+ keywords = {Black Holes (Astronomy), Elliptical Galaxies, Galactic Mass, Galactic Structure, Luminous Intensity, Computational Astrophysics, Galactic Evolution, Many Body Problem},
+     year = 1991,
+    month = nov,
+   volume = 354,
+    pages = {212-214},
+      doi = {10.1038/354212a0},
+   adsurl = {http://adsabs.harvard.edu/abs/1991Natur.354..212E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Barnes:92,
+   author = {{Barnes}, J.~E. and {Hernquist}, L.},
+    title = "{Dynamics of interacting galaxies}",
+  journal = {\araa},
+ keywords = {Active Galaxies, Dynamics, Galactic Evolution, Interacting Galaxies, Starburst Galaxies, Dark Matter, Irregular Galaxies, Morphology},
+     year = 1992,
+   volume = 30,
+    pages = {705-742},
+      doi = {10.1146/annurev.aa.30.090192.003421},
+   adsurl = {http://adsabs.harvard.edu/abs/1992ARA%26A..30..705B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Begelman:80,
+   author = {{Begelman}, M.~C. and {Blandford}, R.~D. and {Rees}, M.~J.},
+    title = "{Massive black hole binaries in active galactic nuclei}",
+  journal = {\nat},
+ keywords = {Active Galactic Nuclei, Binary Stars, Black Holes (Astronomy), Stellar Evolution, Supermassive Stars, Astrophysics, Orbital Elements},
+     year = 1980,
+    month = sep,
+   volume = 287,
+    pages = {307-309},
+      doi = {10.1038/287307a0},
+   adsurl = {http://adsabs.harvard.edu/abs/1980Natur.287..307B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{hezaveh:14b,
+   author = {{Hezaveh}, Y.~D.},
+    title = "{Prospects for Measuring the Mass of Black Holes at High Redshifts with Resolved Kinematics Using Gravitational Lensing}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1408.3631},
+ keywords = {black hole physics, galaxies: formation, galaxies: high-redshift, gravitational lensing: strong},
+     year = 2014,
+    month = aug,
+   volume = 791,
+      eid = {L41},
+    pages = {L41},
+      doi = {10.1088/2041-8205/791/2/L41},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...791L..41H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{hezaveh:14a,
+   author = {{Hezaveh}, Y. and {Dalal}, N. and {Holder}, G. and {Kisner}, T. and 
+	{Kuhlen}, M.},
+    title = "{Measuring the power spectrum of dark matter substructure using strong gravitational lensing}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1403.2720},
+ primaryClass = "astro-ph.CO",
+ keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics},
+     year = 2014,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1403.2720H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Weiss:13,
+   author = {{Wei{\ss}}, A. and {De Breuck}, C. and {Marrone}, D.~P. and 
+	{Vieira}, J.~D. and {Aguirre}, J.~E. and {Aird}, K.~A. and {Aravena}, M. and 
+	{Ashby}, M.~L.~N. and {Bayliss}, M. and {Benson}, B.~A. and 
+	{B{\'e}thermin}, M. and {Biggs}, A.~D. and {Bleem}, L.~E. and 
+	{Bock}, J.~J. and {Bothwell}, M. and {Bradford}, C.~M. and {Brodwin}, M. and 
+	{Carlstrom}, J.~E. and {Chang}, C.~L. and {Chapman}, S.~C. and 
+	{Crawford}, T.~M. and {Crites}, A.~T. and {de Haan}, T. and 
+	{Dobbs}, M.~A. and {Downes}, T.~P. and {Fassnacht}, C.~D. and 
+	{George}, E.~M. and {Gladders}, M.~D. and {Gonzalez}, A.~H. and 
+	{Greve}, T.~R. and {Halverson}, N.~W. and {Hezaveh}, Y.~D. and 
+	{High}, F.~W. and {Holder}, G.~P. and {Holzapfel}, W.~L. and 
+	{Hoover}, S. and {Hrubes}, J.~D. and {Husband}, K. and {Keisler}, R. and 
+	{Lee}, A.~T. and {Leitch}, E.~M. and {Lueker}, M. and {Luong-Van}, D. and 
+	{Malkan}, M. and {McIntyre}, V. and {McMahon}, J.~J. and {Mehl}, J. and 
+	{Menten}, K.~M. and {Meyer}, S.~S. and {Murphy}, E.~J. and {Padin}, S. and 
+	{Plagge}, T. and {Reichardt}, C.~L. and {Rest}, A. and {Rosenman}, M. and 
+	{Ruel}, J. and {Ruhl}, J.~E. and {Schaffer}, K.~K. and {Shirokoff}, E. and 
+	{Spilker}, J.~S. and {Stalder}, B. and {Staniszewski}, Z. and 
+	{Stark}, A.~A. and {Story}, K. and {Vanderlinde}, K. and {Welikala}, N. and 
+	{Williamson}, R.},
+    title = "{ALMA Redshifts of Millimeter-selected Galaxies from the SPT Survey: The Redshift Distribution of Dusty Star-forming Galaxies}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1303.2726},
+ primaryClass = "astro-ph.CO",
+ keywords = {cosmology: observations, early universe, galaxies: evolution, galaxies: high-redshift, ISM: molecules },
+     year = 2013,
+    month = apr,
+   volume = 767,
+      eid = {88},
+    pages = {88},
+      doi = {10.1088/0004-637X/767/1/88},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...767...88W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Inada:08,
    author = {{Inada}, N. and {Oguri}, M. and {Falco}, E.~E. and {Broadhurst}, T.~J. and 
 	{Ofek}, E.~O. and {Kochanek}, C.~S. and {Sharon}, K. and {Smith}, G.~P.
