--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,18 @@
+@ARTICLE{Golse:02,
+   author = {{Golse}, G. and {Kneib}, J.-P.},
+    title = "{Pseudo elliptical lensing mass model: Application to the NFW mass distribution}",
+  journal = {\aap},
+   eprint = {astro-ph/0112138},
+ keywords = {cosmology: miscellaneous, gravitational lensing, dark matter, galaxies: clusters: general, galaxies: halos},
+     year = 2002,
+    month = aug,
+   volume = 390,
+    pages = {821-827},
+      doi = {10.1051/0004-6361:20020639},
+   adsurl = {http://adsabs.harvard.edu/abs/2002A%26A...390..821G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Kormendy:09,
    author = {{Kormendy}, J. and {Bender}, R.},
