--- a/ms.tex
+++ b/ms.tex
@@ -49,23 +49,23 @@ In addition, the distribution of stellar populations in central regions of galax
 %\begin{framed}
 %Stellar light profiles:
 %\\ \\
-Morphological studies of galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging from 50 to 500 pc \citep[e.g.,][]{Ferrarese:06}. 
+Studies of local galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging from 50 to 500 pc \citep[e.g.,][]{Ferrarese:06}. 
 These galaxies are thought to form through gas-poor mergers. In such mergers, the central structure of the resulting galaxy is dominated by the inner structure of the more concentrated progenitor.  Since high-mass ellipticals are thought to form from mergers of their lower-mass counterparts, with steep profiles, the existence of cores in these galaxies represents a challenge to our understanding of galaxy mergers. Cores in massive ellipticals, therefore, should be the result of different (not merger) mechanisms.  
-``Black hole scouring'' is currently the only known plausible mechanism that could explain core-formation in these galaxies \citep{Thomas:14}.
+``Black hole scouring'' is a plausible mechanism that can explain core-formation in these galaxies \citep{Thomas:14}.
 %\end{framed}
 
 %\begin{framed}
-It is thought that during a merger, the SMBHs of the two merging galaxies form a binary which sinks to the center of the potential. The two orbiting SMBHs then dissipate angular momentum through three-body interactions with nearby central stars, pushing them to higher orbits and scouring out a core. This angular momentum loss then allows the two black holes to merge \citep{Begelman:80}.
-Previous studies have shown that the core sizes in these galaxies scales with the mass of their SMBHs, in agreement with theoretical predictions \citep{Kormendy:09,Kormendy:13}.
+It is thought that during a merger, the SMBHs of the two merging galaxies form a binary which sinks to the center of the potential. The two orbiting SMBHs then dissipate angular momentum through three-body interactions with nearby central stars, pushing the stars to higher orbits and ``scouring out'' a core. This angular momentum loss then allows the two black holes to merge \citep{Begelman:80}.
+Previous studies have shown that the core sizes in these galaxies scale with the mass of their SMBHs, in agreement with theoretical predictions \citep{Kormendy:09,Kormendy:13}.
 Such measurements, however have been limited to low redshifts, since both dynamical measurements to constrain the stellar and SMBH masses, and morphological measurements to constrain core sizes require very high physical resolutions. 
 % ... whatever the mechanisms are, clear measurements of the central densities can be valuable to solve this puzzle and to shed light on the connection of SMBHs and galaxies. 
 %\end{framed}
 
 %\begin{framed}
-Strong gravitational lensing is a powerful tool for probing matter distribution in distant galaxies. Among other things, strong lenses have been used to constrain galaxy masses  \citep[e.g.][]{}, density profiles \citep[e.g.][]{}, and abundance of dark matter subhalos \citep[e.g.][]{}.
-Strong lensing formalism indicates that the number of lensed images should always be odd. For double and quad image configurations, a third and a fifth image are predicted to exist near the centers of lensing galaxies. Unlike the other lensed images, which are magnified, this image can be significantly \emph{demagnified}, making its detection difficult.  It is well-understood that the magnification of the central images is very sensitive to the matter distribution in the innermost regions of lens galaxies: very steep singular density profiles significantly demagnify the central images, whereas cored or shallow profiles render them brighter. %Lack of detection of central images in almost all lenses suggests steep central density profiles in lens galaxies. 
-In addition to their low flux, the fact that central images coincide with the emission from lens galaxies makes their detection even harder.
-If observed in optical, absorption in the central dense regions of the lens make the central images even dimmer, while the photon noise from the lens emission further reduces the sensitivity. Moreover, distinguishing the central images from emission originating in the lens galaxies is extremely  challenging.
+Strong gravitational lensing is a powerful tool for probing the matter distribution in distant galaxies. Among other things, strong lenses have been used to constrain galaxy masses  \citep[e.g.][]{}, density profiles \citep[e.g.][]{}, and abundance of dark matter subhalos \citep[e.g.][]{}.
+The strong lensing theory indicates that the number of lensed images should always be odd. For double and quad image configurations, a third and a fifth image are predicted to exist near the centers of lensing galaxies. Unlike the other lensed images, which are magnified, this image can be significantly \emph{demagnified}, making its detection difficult \citep{}.  It is well-understood that the magnification of the central images is very sensitive to the matter distribution in the innermost regions of lens galaxies: very steep singular density profiles significantly demagnify the central images, whereas cored or shallow profiles render them brighter. %Lack of detection of central images in almost all lenses suggests steep central density profiles in lens galaxies. 
+In addition to their low flux, the fact that central images coincide with the emission from lens galaxies makes their detection even harder. Distinguishing the central images from emission originating in the lens galaxies is extremely challenging.
+Moreover, if observed in the optical, absorption in the central dense regions of the lens can make the central images even dimmer, while the photon noise from the lens emission further reduces the sensitivity. 
 
 
 %5) Additionally, another reason for lack of detection is that the central image is located at the center of the lensing galaxy, where i) the sensitivity is lower, due to photon noise of the lens ii) it is difficult to distinguish the flux of the central image from the emission from the lens. iii) if in optical, since they pass through the centers of galaxies there's a high chance of large absorption (in the lens)
@@ -95,10 +95,10 @@ To avoid the possibility of absorption in the lens, most studies have focused on
 
 
 %\begin{framed}
-A new large population of strong lenses has recently been discovered. These systems were initially detected as bright point sources in wide area mm/submm surveys \citep{vieira:10,negrello:10}. Follow-up observations have confirmed that they constitute a large population of strong lenses \citep{vieira:13, hezaveh:13b, bussmann:13}.
-In particular, ALMA observations of these sources have revealed that the background galaxies are starburst, high redshift galaxies, containing a wealth of cold molecular gas \citep{Weiss:13}.  These observations showed that the extreme brightness the sources in combination with the high sensitivity of ALMA results in very high signal to noise ratios \citep[e.g. the lens models in][were based on $\sim50$ second long observations]{hezaveh:13b}.
+A new large population of strong lenses has recently been discovered in mm-bands. These systems were initially detected as bright point sources in wide area mm/submm surveys \citep{vieira:10,negrello:10}. Follow-up observations have confirmed that they constitute a large population of strong lenses \citep{vieira:13, hezaveh:13b, bussmann:13}.
+In particular, ALMA observations of these sources have revealed that the background galaxies are dusty, starburst, high redshift galaxies, containing a wealth of cold molecular gas \citep{Weiss:13}.  These observations showed that the extreme brightness of the sources in combination with the high sensitivity of ALMA results in very high signal to noise ratios \citep[e.g. the lens models in][were based on just $\sim50$ second long observations]{hezaveh:13b}.
 Motivated by the discovery of this population and the operation of ALMA, here we revisit the issue of detecting central images.
-Deep ALMA observations of molecular lines in these sources are likely to be carried out for various reasons \citep[e.g.,][]{hezaveh:14a,hezaveh:14b}. If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-bands, the line fluxes are very unlikely to be suppressed due to absorption in the lens. 
+Deep ALMA observations of molecular line emission in these sources are likely to be carried out for various reasons \citep[e.g.,][]{hezaveh:14a,hezaveh:14b}. If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-bands, the line fluxes are very unlikely to be suppressed due to absorption in the lens. 
 
 %doesn't decrease due to absorption
 %little (if any) absorption in the lens, so the flux doesn't decrease due to absorption
@@ -184,17 +184,24 @@ For simulations where we calculate the detection significance of the demagnified
 
 %\newpage
 \section{Results and Discussions}
+\subsection{Detection of central images with ALMA}
+In this section, we estimate the detection significance of central images of molecular lines with ALMA. As discussed earlier, the flux of the central images strongly depend on the slope of the lensing potential, the core size, and the mass of the central SMBHs.  
+Figure \ref{fig:3} shows the detection significant of the central image for a range of these parameters in a 10-h long ALMA observation. The grey curves (dark to light) correspond to profiles with slope of $\gamma=0.9, 1.0, 1.1,$ and 1.2.  As seen in this figure, larger stellar cores result in brighter images. Lensing studies have shown that the total profiles of galaxies are very close to vein isothermal. In case of an isothermal profile, and with a core size larger than XX pc and a $10^8M_{\odot}$ black hole, such observations should be able to detect the central image with more than $XX\sigma$. We note that for significantly shallower ($\gamma<0.8$) and cored density profiles, the central image is \emph{magnified} and its detection should be trivial. 
+SMBHs can also have a significant influence on the magnification and flux of the central images. More massive SMBHs demagnify the images on scales comparable to their Einstein radius size. 
+The dashed curves in Figure \ref{fig:3} show the suppression of image flux due to existence of a $2\times10^8M_{\odot}$ SMBH.
+
+As seen in Figure \ref{fig:3}, and as pointed out by \citet{Keeton:03}, realistic parameters produce a wide range of predictions for the flux of the central images. Although for some plausible parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2e8$,$R_{core}<300 pc$ ) there is little chance of detecting the central images, over a non-negligable fraction of plausible parameter space the central images could be detected. 
+
 \begin{framed}
-\subsection{Detection of central images}
-1) We evaluate the detection significance of central images over a range of relevant parameters. \\ \\
-2) Figure 4 shows our results for a 10-hr long observation with ALMA\\ \\
-3) we show that, as expected, the image is fainter for steeper profile slopes. \\ \\
-4) the 0.9 value (combined with 0.1 DM) results in the isothermal profile, which has been shown to be consistent with strong lensing data \\ \\
-5) if that's the case, and in the absence of massive BHs, then stellar cores as small as $\sim80$ pc should allow a 5$\sigma$ detection of the central images. \\ \\
-5A) we note that for much shallower density profiles, the central image is actually \emph{magnified}, and therefore it's detection should be trivial.\\ \\
-6) the flux is significantly supressed by the central SMBH \\  \\
-7) the dashed curves show the same for a galaxy with a $2e8M_{\odot}$ SMBH. \\ \\
-8) we note that, as pointed out in Keeton 2003, there's a large range of possibilities for plausible lens parameters: although for some parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2e8$,$R_{core}<300 pc$ ) there is no chance of detecting the central image, over a significant fraction of allowed parameters the central image could be detected. \\ \\
+%1) We evaluate the detection significance of central images over a range of relevant parameters. \\ \\
+%2) Figure 4 shows our results for a 10-hr long observation with ALMA\\ \\
+%3) we show that, as expected, the image is fainter for steeper profile slopes. \\ \\
+%4) the 0.9 value (combined with 0.1 DM) results in the isothermal profile, which has been shown to be consistent with strong lensing data \\ \\
+%5) if that's the case, and in the absence of massive BHs, then stellar cores as small as $\sim80$ pc should allow a 5$\sigma$ detection of the central images. \\ \\
+%5A) we note that for much shallower density profiles, the central image is actually \emph{magnified}, and therefore it's detection should be trivial.\\ \\
+%6) the flux is significantly supressed by the central SMBH \\  \\
+%7) the dashed curves show the same for a galaxy with a $2e8M_{\odot}$ SMBH. \\ \\
+%8) we note that, as pointed out in Keeton 2003, there's a large range of possibilities for plausible lens parameters: although for some parameter combinations (e.g., $\gamma_{s}=1.2,$ $M_{BH} = 2e8$,$R_{core}<300 pc$ ) there is no chance of detecting the central image, over a significant fraction of allowed parameters the central image could be detected. \\ \\
 9) to calculate this plot we have used a configuration XX, because: it allows us to resolve the central image (if existent), while it is more sensitive that more extended configurations.  In addition, this is the configuration that will be likely used for other projects/sciences.
 \end{framed}
 
@@ -205,16 +212,19 @@ For simulations where we calculate the detection significance of the demagnified
 \centering
 \end{center}
 \caption{ Significance of detection of the central image as a function of the stellar core size for a 10-hr long ALMA observation. The colors correspond to different slopes of the stellar component. The solid curves correspond to a case without a SMBH while the dashed line show the result of a simulation which includes a $2\times10^8M_{\odot}$ SMBH at its center.
-\label{f:f2}}
+\label{fig:3}}
 \end{figure}
 
-
-\begin{framed}
 \subsection{SMBHs and the core size}
-1) in this section we study how well we can constrain the mass of the central black hole, the slope of the density and the size of the stellar core. \\ \\
-2) we choose a few models where the central image is detected OR not detected and use a Fisher analysis to determine the degeneracies between the parameters and the detection significance of each parameter.  \\ \\
-3) we note that in the Fisher analysis we include all nuisance parameters (e.g. source position, size, etc.) and marginalize over them  \\ \\
-4) Figure 4 shows the parameters for a case with $R_{core}$=180 pc, $M_{BH}=1e8$ and $\gamma=1$. As seen from Figure 3,  this parameter combination results in a faint ($\sim3\sigma$) detection of the central image. \\ \\
+Here, we study how deep observations of molecular lines can constrain the slope of the density profile, the size of the stellar core, and the mass of the SMBHs. We study a few cases in which the central images are detected as well as few scenarios in which they are below the $<3\sigma$ detection limit. We use a Fisher analysis to investigate the degeneracies among parameters and the constraints that could be placed on them.
+We include all our model parameters in the Fisher matrix, and marginalize over the nuisance parameters (e.g. intrinsic source flux and position), to obtain the marginalized likelihood of the relevant parameters.  
+ Figure \ref{fig:4} shows the parameters for a case with $R_{core}$=180 pc, $M_{BH}=1e8$ and $\gamma=1$. As seen in Figure \ref{fig:3},  this parameter combination results in a faint ($\sim3\sigma$) detection of the central image. 
+ 
+\begin{framed}
+%1) in this section we study how well we can constrain the mass of the central black hole, the slope of the density and the size of the stellar core. \\ \\
+%2) we choose a few models where the central image is detected OR not detected and use a Fisher analysis to determine the degeneracies between the parameters and the detection significance of each parameter.  \\ \\
+%3) we note that in the Fisher analysis we include all nuisance parameters (e.g. source position, size, etc.) and marginalize over them  \\ \\
+%4) Figure 4 shows the parameters for a case with $R_{core}$=180 pc, $M_{BH}=1e8$ and $\gamma=1$. As seen from Figure 3,  this parameter combination results in a faint ($\sim3\sigma$) detection of the central image. \\ \\
 5) we note that the black hole mass is degenerate with the core size: a larger core, results in a brighter image, which can be supressed by a more massive BH. \\ \\
 6) The Fisher data show that the black hole mass cannot be measured with high significance in such observations ($1.16\sigma$) \\ \\
 7) however, interestingly, the degeneracy of the black hole mass and the size of the central core breaks at the high end. and the stellar core is measured with XX $\sigma$\\ \\
@@ -255,12 +265,13 @@ For simulations where we calculate the detection significance of the demagnified
 \centering
 \end{center}
 \caption{ Covariance matrix of parameters for a few different scenarios.
-\label{f:f2}}
+\label{fig:4}}
 \end{figure}
 
 
 
 \section{Conclusion}
+We examined the possibility of detecting central, demagnified images of strongly lensed molecular lines with ALMA. We find that there is a non-negligible space of realistic and plausible parameters that result in a high significance detection of the central images. We showed that such deep observations can either allow a measurement of the mass of the central SMBH and the stellar core size, or place strong limits on them (if not detected).    
 
 \acknowledgements{
 }
